# postgre-scylla-migration

./: README.md  pyproject.toml  run.py
.zed/: settings.json
src/postgre_scylla_migration/: migrate.py  tables.py
