[project]
name = "postgre-scylla-migration"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Metin Demir", email = "metmirr@gmail.com" }]
dependencies = [
    "psycopg2>=2.9.9",
    "python-dotenv>=1.0.1",
    "scylla-driver>=3.26.9",
    "ruff>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/postgre_scylla_migration"]

[tool.pyright]
venvPath = "."
venv = ".venv"
